--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,3 +1,24 @@
 <h1>Update Pet</h1>
+<form action="/pets/<%=@pet.id%>" method="post">
+<input type="hidden" name="_method" value="patch">
+  <label>Name:</label>
 
+  <br>
 
+  <input type="text" name="pet[name]" id="pet_name" value="<%=@pet.name%>">
+
+  <h3>Existing Owners:</h3>
+  <% @owners.each do |owner| %>
+    <input type="radio" name="pet[owner_id]" id="<%= owner.id %>" value="<%= owner.id %>" <%= 'checked' if @pet.owner_id == owner.id%>><%= owner.name %><br>
+  <% end %>
+  <br>
+  
+  <h3>New Owner:</h3>
+  <br>
+  <label for="owner_name">Owner Name:</label>
+  <br>
+  <input type="text" name="owner[name]" id="owner_name">
+  <br><br>
+  
+  <input type="submit" value="Update Pet" id="Update Pet">
+</form>
